--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
                             <p class="font-bold text-red-600 mb-2 border-b border-red-100 pb-1">ขั้นที่ 2: หักเปอร์เซ็นต์ตามวันไม่มาทำงาน</p>
                             <div class="grid grid-cols-2 gap-x-4">
                                 <table class="w-full">
-                                    <tr class="border-b border-slate-200"><td class="py-1">0-10 วัน</td><td class="text-right text-slate-400">ไม่หัก</td></tr>
-                                    <tr class="border-b border-slate-200"><td class="py-1">11-12 วัน</td><td class="text-right text-red-500 font-medium">-15%</td></tr>
+                                    <tr class="border-b border-slate-200"><td class="py-1">0-9 วัน</td><td class="text-right text-slate-400">ไม่หัก</td></tr>
+                                    <tr class="border-b border-slate-200"><td class="py-1">10-12 วัน</td><td class="text-right text-red-500 font-medium">-15%</td></tr>
                                     <tr class="border-b border-slate-200"><td class="py-1">13-15 วัน</td><td class="text-right text-red-500 font-medium">-20%</td></tr>
                                     <tr class="border-b border-slate-200"><td class="py-1">16-18 วัน</td><td class="text-right text-red-500 font-medium">-25%</td></tr>
                                     <tr><td class="py-1">19-21 วัน</td><td class="text-right text-red-500 font-medium">-30%</td></tr>
@@ -354,7 +354,7 @@
                                     <tr class="border-b border-slate-200"><td class="py-1">22-24 วัน</td><td class="text-right text-red-500 font-medium">-40%</td></tr>
                                     <tr class="border-b border-slate-200"><td class="py-1">25-27 วัน</td><td class="text-right text-red-500 font-medium">-50%</td></tr>
                                     <tr class="border-b border-slate-200"><td class="py-1">28-30 วัน</td><td class="text-right text-red-500 font-medium">-55%</td></tr>
-                                    <tr><td class="py-1">31 วันขึ้นไป</td><td class="text-right text-red-500 font-medium">-60%</td></tr>
+                                    <tr><td class="py-1">มากกว่า 30 วัน</td><td class="text-right text-red-500 font-medium">-60%</td></tr>
                                 </table>
                             </div>
                         </div>
@@ -479,16 +479,17 @@
                 else basePercent = 0;
 
                 // 2. Deduction % based on Leave Days (Subtract directly from Base Percent)
+                // Updated Logic based on new requirements
                 let deductionPoint = 0;
-                if (leave > 30) deductionPoint = 60;      // > 30 (covers 31+)
+                if (leave > 30) deductionPoint = 60;       // > 30
                 else if (leave >= 28) deductionPoint = 55; // 28-30
                 else if (leave >= 25) deductionPoint = 50; // 25-27
                 else if (leave >= 22) deductionPoint = 40; // 22-24
                 else if (leave >= 19) deductionPoint = 30; // 19-21
-                else if (leave >= 16) deductionPoint = 25; // 16-18
-                else if (leave >= 13) deductionPoint = 20; // 13-15
-                else if (leave > 10) deductionPoint = 15;  // 11-12 (More than 10)
-                else deductionPoint = 0;                   // 0-10
+                else if (leave >= 16) deductionPoint = 25; // 16-18 (Updated to 25%)
+                else if (leave >= 13) deductionPoint = 20; // 13-15 (Updated to 20%)
+                else if (leave >= 10) deductionPoint = 15; // 10-12 (Updated to 15%)
+                else deductionPoint = 0;                   // 0-9
 
                 // 3. Calculation
                 // Formula: Bonus = Salary * (Base% - Deduction%)
@@ -740,8 +741,9 @@
                 btn.disabled = true;
                 btn.innerHTML = '<i class="fa-solid fa-spinner fa-spin"></i> บันทึก...';
 
-                // สร้างข้อความสรุปการคำนวณ (เพิ่มจำนวนวันไม่มาทำงาน)
-                const summaryNote = `โบนัสสุทธิ ${emp.calcEffectivePercent}% (ฐาน ${emp.calcBasePercent}% - หักไม่มาทำงาน ${emp.leaveDays} วัน คิดเป็น ${emp.calcDeductionPercent}%)`;
+                // สร้างข้อความสรุปการคำนวณ (เพิ่มยอดเงินโบนัสสุทธิ)
+                const bonusMoney = this.formatCurrency(emp.calcBonusAmount);
+                const summaryNote = `โบนัสสุทธิ ${bonusMoney} (${emp.calcEffectivePercent}%) (ฐาน ${emp.calcBasePercent}% - หักไม่มาทำงาน ${emp.leaveDays} วัน คิดเป็น ${emp.calcDeductionPercent}%)`;
                 
                 // ตรวจสอบว่ามีหมายเหตุเดิมไหม ถ้ามีให้ต่อท้าย ถ้าไม่มีให้ใส่ใหม่เลย
                 let newNote = summaryNote;
@@ -771,7 +773,7 @@
                     Swal.fire({
                         icon: 'success',
                         title: 'บันทึกเรียบร้อย',
-                        text: `อัปเดตโบนัส ${emp.calcEffectivePercent}% และหมายเหตุลง Sheet แล้ว`,
+                        text: `อัปเดตโบนัส ${bonusMoney} และหมายเหตุลง Sheet แล้ว`,
                         showConfirmButton: false,
                         timer: 2000
                     });
